--- a/estilos/style.css
+++ b/estilos/style.css
@@ -54,5 +54,11 @@ section#login > div#imagem {
 div#formulario {
     display: block;
     padding: 10px;
+    text-align: center;
+    margin-bottom: 10px;
 
+}
+
+div#formulario > p {
+    font-size: 0.8em;
 }
